fix: add overflow for cells when resizing

--- a/src/app/resizable-table/resizable-table.component.scss
+++ b/src/app/resizable-table/resizable-table.component.scss
@@ -17,7 +17,12 @@
     cursor: col-resize;
   }
   .mat-cell {
-    white-space: pre;
+    max-width: 180px;
+
+    .cell-content {
+      white-space: pre;
+      overflow-x: hidden;
+    }
 
     span {
       display: block;
